--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>nogroup</groupId>
-    <artifactId>PasswordManeger</artifactId>
+    <artifactId>PasswordManager</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>PasswordManeger</name>
-    <description>PasswordManeger</description>
+    <name>PasswordManager</name>
+    <description>PasswordManager</description>
     <properties>
         <java.version>17</java.version>
     </properties>
