--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
-spring.data.mongodb.database=Passwords_Project
-spring.data.mongodb.port=27017
+spring.data.mongodb.host=${MONGO_HOST:localhost}
+spring.data.mongodb.port=${MONGO_PORT:27017}
+spring.data.mongodb.database=${MONGO_DB:Passwords_Project}
+
+server.port=8080
+server.ssl.enabled=true
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-type=PKCS12
+############################### CHANGE THIS TO USE SAFELY
+server.ssl.key-alias=makenew
+server.ssl.key-store-password=123456
+###############################
